# trivia-game

./: 404.html  CONTRIBUTING.md  LICENSE  README.md  codecov.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml
docs/: index.md  modules.md
modules/: index.html
search/: search_index.json
stubs/: app_interface.pyi  base_types.pyi  frame_registry.pyi  frames.pyi  models.pyi  quiz_brain.pyi  trivia_api.pyi
stubs/view/frames/: __init__.pyi  app_settings.pyi  base_frame.pyi  main_menu.pyi  quiz_frames.pyi  score_board.pyi  start_game.pyi
stubs/view/frames/dialogs/: score_dialog.pyi
tests/: conftest.py  quiz_frames.pyi  test_base_types.py  test_foo.py  test_frames.py  test_quiz_brain.py  test_trivia_api.py
tests/api/: conftest.py  test_trivia_api.py
tests/core/: conftest.py  test_base_types.py  test_quiz_brain.py
tests/gui/: conftest.py  test_menu_frames.py  test_quiz_frames.py  test_scoreboard_frame.py
tests/in_progress/: test_frames.py
tests/integration/: test_trivia_api_integration.py
trivia_game/: app_interface.py  base_types.py  exceptions.py  main.py  models.py  quiz_brain.py  scores.json  trivia_api.py
trivia_game/view/: frame_registry.py  frames.py
trivia_game/view/dialogs/: score_dialog.py
trivia_game/view/frames/: __init__.py  app_settings.py  base_frame.py  main_menu.py  quiz_frames.py  score_board.py  start_game.py
