[tool.poetry]
name = "trivia_game"
version = "0.0.1"
description = "Trivia Game"
authors = ["Pawel Bartczak <pawel@bartczak.tech>"]
repository = "https://github.com/bartczak-pa/trivia-game"
documentation = "https://bartczak-pa.github.io/trivia-game/"
readme = "README.md"
packages = [
  {include = "trivia_game"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.32.3"
urllib3 = "^2.2.3"
types-requests = "^2.32.0.20241016"
customtkinter = "^5.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.16.2"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["trivia_game"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"



[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that interact with the real API"
]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["trivia_game"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
"tests/test_trivia_api.py" = ["SIM117", "S105"]

[tool.deptry]
ignore = ["DEP002"]
